# doc-align

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.bctx/: config.json
.bctx/templates/_default/: context.md
.bctx/templates/feature/: context.md
.changelog/: initial-release.feature
.github/workflows/: callable-ci.yml  push-to-main.yml  release.yml
align_md_docs/: __init__.py  arrows.py  box_walls.py  box_widths.py  cli.py  parser.py  pipes.py  rails.py  tables.py  utils.py
docs/: architecture.md  cicd.md  concepts.md  overview.md  repo.md  rules.md
docs/guides/: cli-usage.md  releasing.md  testing-strategy.md
src/docalign/: cli.py
src/mdalign/: cli.py  parser.py  utils.py
src/mdalign/checks/: box_padding.py  box_spacing.py  box_walls.py  def_lists.py  horiz_arrows.py  list_descs.py  pipes.py  rails.py  wide_chars.py
tests/: test_align.py
tests/fixtures/all-checks/: expected.md  input.md
tests/fixtures/checks/box-padding/01-inconsistent-pad/: expected.md  input.md
tests/fixtures/checks/box-padding/03-nested-boxes/: expected.md  input.md
tests/fixtures/checks/box-padding/04-fp-layout-intent/: input.md
tests/fixtures/checks/box-padding/05-fp-single-content-line/: expected.md
tests/fixtures/checks/box-padding/06-fp-tight-box/: expected.md
tests/fixtures/checks/box-spacing/01-fp-side-by-side-nested/: expected.md
tests/fixtures/checks/def-lists/01-basic/: expected.md  input.md
tests/fixtures/checks/def-lists/02-fp-single-item/: expected.md
tests/fixtures/checks/def-lists/03-fp-url-in-value/: input.md
tests/fixtures/checks/def-lists/04-multiple-groups/: expected.md  input.md
tests/fixtures/checks/def-lists/05-indented-keys/: expected.md  input.md
tests/fixtures/checks/def-lists/06-fp-inside-code-block/: input.md
tests/fixtures/checks/def-lists/07-multi-word-keys/: expected.md  input.md
tests/fixtures/checks/def-lists/08-fp-embedded-in-list/: input.md
tests/fixtures/checks/horiz-arrows/01-right-gap/: input.md
tests/fixtures/checks/horiz-arrows/02-left-gap/: expected.md  input.md
tests/fixtures/checks/horiz-arrows/03-fp-touching/: input.md
tests/fixtures/checks/horiz-arrows/04-both-directions/: expected.md  input.md
tests/fixtures/checks/horiz-arrows/05-multiple-arrows/: expected.md  input.md
tests/fixtures/checks/horiz-arrows/06-fp-no-box-wall/: input.md
tests/fixtures/checks/horiz-arrows/07-fp-floating-arrow/: expected.md
(+6 files in other folders)
