[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "align-md-docs"
version = "0.1.0"
description = "Auto-fix alignment in markdown docs"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
align-md-docs = "align_md_docs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
